[package]
name = "vesting_schedule"
version = "0.1.0"
edition = "2021"

[lib]
name = "vesting_schedule"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.1.0"
soroban-token-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
